[package]
name = "goplus_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
sha1 = "0.10.6"
tracing = "0.1.40"
