[package]
name = "goplus_rs"
version = "0.1.0"
authors = ["Austin Palmer atx.jp.dev@gmail.com"]
edition = "2021"
description = "This repository contains a Rust API wrapper for interacting with GoPlusLabs services for risk metrics and analysis on tokens, smart contracts, and wallets across different chain ecosystems."
license = "MIT OR Apache-2.0"
repository = "https://github.com/austinjp17/GoPlus_rs"
keywords = ["GoPlus", "API", "Token", "Risk"]
categories = ["API bindings"]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
sha1 = "0.10.6"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
